Fix Contacts on mobile

--- a/src/components/genericLayout/genericLayout.module.scss
+++ b/src/components/genericLayout/genericLayout.module.scss
@@ -116,3 +116,7 @@ $sidebarWidth: 280px;
 		z-index: 1;
 	}
 }
+
+.content {
+	min-width: 0;
+}
